--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,11 +14,8 @@
     --normal-font-size: .938rem;
     --smaller-font-size: .75em;
     --tiny-font-size: .75em;
-
     --font-regular: 400;
-    --font-semi-bold: 800;
-
-
+    --font-semi-bold: 700;
     --z-tooltip:10;
     --z-fixed: 100;
 }
@@ -34,35 +31,47 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-}
-.dashboardBody{
-    display: flex;
-    justify-content: center;
+    font-family: var(--body-font);
 }
 .header{
     position: fixed;
     top: 0;
-    left: 0;
-    right: 0;
     z-index: var(--z-fixed);
     margin: .75rem;
+    /* left: 0; */
+    right: 0;
+    width: 80%;
 }
 .headerContainer {
     display: flex;
-    align-items: center;
     justify-content: space-between;
     width: 100%;
     height: var(--header--height);
     background-color: var(--body-color);
     box-shadow:  0 2px 24px  var(--shadow-color);
+    align-items: center;
+    padding-inline: 1.5rem;
+    border-radius: 1rem;
+    transition: background-color .4s;
 }
 
 .headerLogo {
-    display: flex;
+    display: inline-flex;
+    align-items: center;
+    column-gap: .25rem;
     justify-content: space-between;
+    /* padding: .75rem; */
+}
+.headerLogo i{
+    font-size: 1.5rem;
+    color: var(--first-color);
+}
+.headerLogo span{
+    color: var(--title-color);
+    font-weight: var(--font-semi-bold);
 }
 .headerToggle{
-    display:none;
+    /* display:none; */
 }
 .sidebar{
     position: fixed;
@@ -70,15 +79,23 @@
     top: 0;
     bottom: 0;
     z-index: var(--z-fixed);
-    width: 288px;
+    width: 275px;
     background-color: var(--body-color);
     box-shadow:  0 2px 24px  var(--shadow-color);
     transition: left .4s , background-color .4s, width .4s;
+    padding-block: 1.5rem;
+    margin:.75rem;
+    border-radius:  1rem;
 }
 .sidebarContainer .sidebarContent{
     display: flex;
     flex-direction: column;
     row-gap: 3rem;
+    margin-top: 2rem;
+}
+.sidebarContainer{
+    height: 100%;
+    overflow: hidden;
 }
 .userSection img {
     width: 50px;
@@ -90,4 +107,73 @@
     display: flex;
     justify-content: center;
     gap: 10px;
+}
+.siderbar_link {
+    display: grid;
+    grid-template-columns: repeat(2, max-content);
+    column-gap: 1rem;
+    align-items: center;
+    transition: color .4s, opacity .4s;
+    color: var(--text-color);
+    text-decoration: none;
+    position: relative;
+    padding-bottom: .75rem;
+    padding-left: 1.75rem;
+}
+.sidebarList .sidebarActions{
+    display: grid;
+    row-gap: 0.75rem;
+    padding-left: 1.75rem;
+}
+a.siderbar_link span {
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-regular);
+}
+a.siderbar_link i {
+    font-size: 1.25rem;
+}
+.siderbar_link:hover{
+    color: var(--first-color);
+}
+.siderbarTitle {
+    font-size: var(--tiny-font-size);
+    color: var(--text-color);
+    text-transform: uppercase;
+    width: max-content;
+    font-weight: var(--font-semi-bold);
+    padding-left: 2rem;
+    margin-bottom: 1.5rem;
+}
+.sidebarContent{
+    overflow: hidden auto;
+}
+.sidebarContent::-webkit-scrollbar{
+    width: .4rem;
+    background-color: hsl(228, 8%, 85%);
+}
+.sidebarContent::-webkit-scrollbar-thumb{
+    background-color: hsl(228, 8%, 75%);
+}
+.siderbar_link::after {
+    position: absolute;
+    left: 0;
+}
+
+a.siderbar_link i {
+    font-size: 1.25rem;
+}
+
+a.siderbar_link span {
+    /* font-weight: var(--font-semi-bold); */
+}
+
+a.siderbar_link:hover {
+    color: var(--first-color);
+}
+a.active::after {
+    content: "";
+    position: absolute;
+    width: 3px;
+    height: 20px;
+    background-color: var(--first-color);
 }
